# claudekit

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  PRD.md  Phase1_SessionBrowser_PRD.md  Phase1_SessionBrowser_TDD.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dashboard.rs  mod.rs  projects.rs  sessions.rs  shell.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/parser/: jsonl.rs  mod.rs  project.rs
src/components/dashboard/: ActivityHeatmap.tsx  Dashboard.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/session/: ConversationView.tsx  MessageBubble.tsx  ToolBlock.tsx
src/lib/: api.ts
src/test/: App.test.tsx  Sidebar.test.tsx  setup.ts
src/types/: index.ts
