[package]
name = "claudekit"
version = "0.1.0"
description = "ClaudeKit — session browser and insights for Claude Code"
authors = []
edition = "2021"

[lib]
name = "claudekit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File system
walkdir = "2"
notify = "6"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

